kubernetes-ingress-hands-on/exercises/05-multiple-rules-and-wildcards/exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-routing
  namespace: ingress-lab
spec:
  ingressClassName: nginx
  rules:
    - host: admin.apps.ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: "*.apps.ingress.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote-api
                port:
                  number: 80
